copia de seguridad 601pm

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,8 @@ JWT_EXPIRES=7d
 ADMIN_NAME=Admin
 ADMIN_EMAIL=admin@mamare.com
 ADMIN_PASSWORD=Admin123!
+
+# ✅ CORREGIDO: usa puerto 4200
+MAIL_USER=mama.c4re@gmail.com
+MAIL_PASS=uqwejaswgvjbpsxt
+FRONTEND_URL=http://localhost:4200
