--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@google-cloud/translate": "^9.3.0",
     "chart.js": "^4.5.1",
+    "emailjs-com": "^3.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.2",
     "tslib": "^2.3.0",
