--- a/backend/.env
+++ b/backend/.env
@@ -7,8 +7,8 @@ JWT_EXPIRES=7d
 
 //Admincreado
 ADMIN_NAME=Admin
-ADMIN_EMAIL=admin@mamare.com
-ADMIN_PASSWORD=Admin123!
+ADMIN_EMAIL=mama.c4re@gmail.com
+ADMIN_PASSWORD=MamaCare2024!Secure
 
 # ✅ CORREGIDO: usa puerto 4200
 MAIL_USER=mama.c4re@gmail.com
