--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 PORT=4000
 NODE_ENV=development
 API_VERSION=v1
-MONGODB_URI=mongodb://localhost:27017/mamacare_dev
+MONGODB_URI=mongodb+srv://mamac4re_db_user:kcn71I1oG1SpKRTI@cluster0.27jwjig.mongodb.net/mamaCareDB?appName=Cluster0
 JWT_SECRET=14072024copaamerica
 JWT_EXPIRES=7d
 
-//Admincreado
+# Admincreado
 ADMIN_NAME=Admin
 ADMIN_EMAIL=mama.c4re@gmail.com
 ADMIN_PASSWORD=MamaCare2024!Secure
